Added Setup, Usage, and Instillation information to README.md